--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = {version ="1.0.144",features = ["derive"]}
 chrono = "0.4.22"
 qstring = "0.7.2"
 md5 = "0.7.0"
+#brotli = "3.3.4"
 
 [profile.fast]
 inherits = "release"
