--- a/.github/workflows/ci_ubuntu.yml
+++ b/.github/workflows/ci_ubuntu.yml
@@ -23,3 +23,9 @@ jobs:
         name: biliroaming-rust-speedtest-${{ github.run_number }}
         path: |
           ./target/fast/biliroaming_rust_speedtest
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: biliroaming-rust-server-${{ github.run_number }}
+        path: |
+          ./target/fast/biliroaming_rust_speedtest
