--- a/config.json
+++ b/config.json
@@ -1,12 +1,39 @@
 {
+    "title": "测试测速 ceshi Test-123",
     "user_agent": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.110 Safari/537.36",
     "access_key": "",
     "access_token": "",
-    "expire_time": "",
+    "expire_time": 1667214667,
     "version_code": "65",
     "version_name": "1.6.5",
     "bili_app_key": "1d8b6e7d45233436",
-    "bili_app_sec": "560c52ccd288fed045859ed18bffd973",
     "bstar_app_key": "7d089525d3611b1c",
-    "bstar_app_sec": "acd495b248ec528c2eed1e862d393126"
+    "servers": [
+        "哔哩.plus",
+        "api.qiu.moe",
+        "哔哩.icu",
+        "陈睿.我爱你",
+        "bstar.kirara-fantasia.moe",
+        "bili.tuturu.top",
+        "東雪蓮.我爱你",
+        "璃月烧鸡.fun",
+        "伊蕾娜.我爱你",
+        "atri.ink",
+        "星瞳.我爱你",
+        "出差.xyz",
+        "bili.lli.cx",
+        "陈睿你妈什么时候死.work",
+        "万人骑.pch.pub",
+        "小陈.你马什么时候进.icu",
+        "deep-dark-fantasy.chiya.club",
+        "api.bilibili.sb",
+        "bili.baba.plus",
+        "melusinesuki.site",
+        "bili.api.acfun.win",
+        "bilisb.ltmsc.top",
+        "biligo.org",
+        "西大师.icu",
+        "afdian.fun",
+        "api.atri.ink"
+    ]
 }
