--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ serde = {version ="1.0.144",features = ["derive"]}
 chrono = "0.4.22"
 qstring = "0.7.2"
 md5 = "0.7.0"
-idna = "0.2.3"
-#brotli = "3.3.4"
+idna = "0.3.0"
+ftp = "3.0.1"
 
 [profile.fast]
 inherits = "release"
